fix: adjust title position in AboutMap component for better alignment

--- a/client/src/components/AboutPage/AboutMain/AboutMap/AboutMap.module.scss
+++ b/client/src/components/AboutPage/AboutMain/AboutMap/AboutMap.module.scss
@@ -14,10 +14,11 @@
   }
   &__title {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: calc(100% - 40px);
+    z-index: 6;
   }
   &__video {
     width: 100%;
